# MicroCurrency

./: .gitignore  DATABASE.db  Dockerfile  MicroCurrency.pyw  README.md  config.json.example  pyproject.toml  tribute.py
microcurrency/: .fuse_hidden0000000f00000002  __init__.py  api.py  currency.py  db.py  enum.py  exchange.py  print.py
microcurrency/api/: __init__.py  account.py  exchange.py
microcurrency/core/: currency.py  db.py
microcurrency/scripts/: __init__.py
microcurrency/util/: __init__.py  mround.py  pager.py
static/: about.html  contact.html  docs.html  index.html  style.css
