[tool.poetry]
name = "microcurrency"
version = "0.1.0"
description = ""
authors = ["BadPythonCoder <nuh@uh.uh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"

[tool.poetry.scripts]
bot = "microcurrency.__init__:start"
create_money = "microcurrency.scripts:create_money"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
