[tool.poetry]
name = "microcurrency"
version = "1.0.3"
description = ""
authors = ["BadPythonCoder <nuh@uh.uh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"

[tool.poetry.scripts]
bot = "microcurrency.__init__:start"
create_money = "microcurrency.scripts:create_money"
get_transactions = "microcurrency.scripts:get_transactions"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
